--- a/templates/api/index.html.twig
+++ b/templates/api/index.html.twig
@@ -45,6 +45,7 @@
             });
         }
 
-        document.addEventListener('DOMContentLoaded', initMap);
+        window.onload = initMap;
+
     </script>
 {% endblock %}
