--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block content %}{% endblock %}
 
     </body>
 </html>
