-Conception du logo -Amélioration de l'interface

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,8 +13,8 @@
     </head>
     <body>
     <div class="container" id="head">
-        <img src={{ asset('images/veliko.png') }} >
-        <h1>VELIKO</h1>
+        <img src="{{ asset('images/logoVeliko.png') }}" width="200"  >
+        <h1></h1>
     </div>
     <div class="container">
             {% block content %}{% endblock %}
