-création des pages : A propos, mentions légales, politiques de confidentialités, Contact, avec leurs controlleurs respectifs et leurs fichiers twigs

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,6 @@
             #head {
                 text-align: center;
                 margin-top: 30px;
-                /* text-align: center = centre le texte horizontalement.
-                   margin-top: 30px = ajoute un espace (marge) de 30 pixels au-dessus de cet élément. */
             }
 
             /**/
@@ -60,13 +58,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Accueil</a>
+                        <a class="nav-link" href="/api/velib">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Profil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">À propos</a>
+                        <a class="nav-link" href="/a_propos">À propos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Se déconnecter</a>
@@ -88,9 +86,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2024 MonProjet. Tous droits réservés.</p>
-            <a href="#" class="footer-link">Mentions légales</a> |
-            <a href="#" class="footer-link">Politique de confidentialité</a> |
-            <a href="#" class="footer-link">Contact</a>
+            <a href="/mention/legal" class="footer-link">Mentions légales</a> |
+            <a href="/politique/de/confidentialite" class="footer-link">Politique de confidentialité</a> |
+            <a href="/contact" class="footer-link">Contact</a>
         </div>
     </footer>
 
