--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
     </head>
     <body>
     <div class="container" id="head">
-        <img src={{ asset('images/veliko.png') }} >
+        <img src="{{ asset('images/veliko.png') }}" width="100" >
         <h1>VELIKO</h1>
     </div>
     <div class="container">
