add comment / edit html content

--- a/templates/a_propos/index.html.twig
+++ b/templates/a_propos/index.html.twig
@@ -101,9 +101,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        Veliko est une entreprise dédiée à fournir une solution de mobilité durable et pratique à travers Paris et l'Île-de-France.
-                        Depuis sa création en réponse à l'initiative <span class="about-highlight">Vélib' Métropole</span>, Veliko a su s'imposer comme
-                        un acteur incontournable dans le domaine du transport urbain.
+                        Veliko est un projet dédiée à fournir une solution de mobilité durable et pratique à travers Paris et l'Île-de-France.
                     </p>
                     <p>
                         Avec plus de <span class="about-highlight">19 000 vélos</span>, dont 40 % à assistance électrique, et plus de
@@ -118,12 +116,12 @@
                 <h2>Rencontrez nos fondateurs</h2>
                 <div class="founders">
                     <div class="founder-card">
-                        <div class="founder-name">Benjamin Poney</div>
+                        <div class="founder-name">Thomas Paul</div>
                         <div class="founder-role">Etudiant en 2TSSIO</div>
                         <p></p>
                     </div>
                     <div class="founder-card">
-                        <div class="founder-name">Thomas Paul</div>
+                        <div class="founder-name">Benjamin Poney</div>
                         <div class="founder-role">Etudiant en 2TSSIO</div>
                         <p></p>
                     </div>
