--- a/templates/mention_legal/index.html.twig
+++ b/templates/mention_legal/index.html.twig
@@ -57,9 +57,9 @@
             <div class="legal-title">1. Éditeur du site</div>
             <p>
                 Le site <strong>Veliko</strong> est édité par : <br>
-                Poney Benjamin et Paul Thomas  <br>
+                Paul Thomas et Poney Benjamin <br>
                 43 Rue Raspail, 93100 Montreuil <br>
-                +33 6 10 47 17 18 | +33 6 50 15 81 62  <br>
+                +33 6 50 15 81 62 | +33 6 10 47 17 18   <br>
                 contact@veliko.com <br>
             </p>
 
