--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,7 +67,10 @@
                     <a class="nav-link" href="/a_propos">À propos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Se déconnecter</a>
+                    <a class="nav-link" href="/login">Se connecter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Se déconnecter</a>
                 </li>
             </ul>
         </div>
