--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,16 +58,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Accueil</a>
+                    <a class="nav-link" href="/map">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Profil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/a_propos">À propos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Se connecter</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Se déconnecter</a>
