--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,9 +60,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/map">Accueil</a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profil</a>
+                    <a class="nav-link" href="/profile">Profil</a>
                 </li>
+
+
                 <li class="nav-item">
                     <a class="nav-link" href="/a_propos">À propos</a>
                 </li>
