--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,6 +67,9 @@
 
 
                 <li class="nav-item">
+                    <a class="nav-link" href="/favorite">Mes favoris</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/a_propos">À propos</a>
                 </li>
                 <li class="nav-item">
