--- a/templates/api/index.html.twig
+++ b/templates/api/index.html.twig
@@ -59,15 +59,22 @@
             var stations = {{ stations|json_encode()|raw }};
 
             // Afficher Station et Information sur celle-ci
+
             if (Array.isArray(stations)) {
                 stations.forEach(function(station) {
+                    // Verifier si Favoris et mettre les informations en fonction
+                    var isFavorite = station.is_favorite;
+                    var buttonLabel = isFavorite ? 'Supprimer des favoris' : 'Ajouter aux favoris';
+                    var buttonAction = isFavorite ? 'removeFromFavorites(' + station.station_id + ')' : 'addToFavorites(' + station.station_id + ')';
+                    var icon = isFavorite ? '⭐' : '☆';
+
                     var marker = L.marker([station.lat, station.lon])
                         .bindPopup(
                             "Nom : " + station.name +
                             "<br>Capacité : " + station.capacity +
                             "<br>Vélos mécaniques disponibles : " + station.mechanical_bikes +
                             "<br>Vélos électriques disponibles : " + station.electric_bikes +
-                            "<br><button onclick='addToFavorites(" + station.station_id + ")'>Ajouter aux favoris</button>"
+                            "<br><span>" + icon + "</span> <button onclick='" + buttonAction + "'>" + buttonLabel + "</button>"
                         );
 
                     // Afficher info durant un survol
@@ -77,16 +84,18 @@
                             "<br>Capacité : " + station.capacity +
                             "<br>Vélos mécaniques disponibles : " + station.mechanical_bikes +
                             "<br>Vélos électriques disponibles : " + station.electric_bikes +
-                            "<br><button onclick='addToFavorites(" + station.station_id + ")'>Ajouter aux favoris</button>"
+                            "<br><span>" + icon + "</span> <button onclick='" + buttonAction + "'>" + buttonLabel + "</button>"
                         ).openPopup();
                     });
 
                     // Ajouter le marqueur au groupe de marqueurs
                     markers.addLayer(marker);
                 });
-            } else {
+            }
+            else {
                 console.error("Les données des stations ne sont pas sous forme de tableau.");
             }
+
 
             // Ajouter le groupe de marqueurs à la carte
             map.addLayer(markers);
@@ -94,7 +103,7 @@
 
         function addToFavorites(stationId) {
             console.log('Tentative d\'ajout de la station aux favoris :', stationId);
-            fetch(`/add-favorite/${stationId}`, { method: 'POST' })
+            fetch(`/user/add-favorite/${stationId}`, { method: 'POST' })
                 .then(response => response.json())
                 .then(data => {
                     const messageDiv = document.getElementById('message');
@@ -102,6 +111,27 @@
                     messageDiv.innerText = data.message;
                     messageDiv.style.backgroundColor = data.type === 'success' ? '#4CAF50' : '#f44336'; //couleur
                     messageDiv.style.color = 'white'; // Texte en blanc
+
+                    // Rafraîchir la page après avoir laissé l'utilisateur lire le message pour mettre à jour les pop-up
+                    setTimeout(() => location.reload(), 500);
+                })
+                .catch(error => console.error('Erreur:', error));
+            console.log("passage")
+        }
+
+        function removeFromFavorites(stationId) {
+            console.log('Tentative de suppression de la station des favoris :', stationId);
+            fetch(`/user/remove-favorite/${stationId}`, { method: 'POST' })
+                .then(response => response.json())
+                .then(data => {
+                    const messageDiv = document.getElementById('message');
+                    messageDiv.style.display = 'block'; // Affiche le div
+                    messageDiv.innerText = data.message;
+                    messageDiv.style.backgroundColor = data.type === 'success' ? '#4CAF50' : '#f44336'; // couleur
+                    messageDiv.style.color = 'white'; // Texte en blanc
+
+                    // Rafraîchir la page après avoir laissé l'utilisateur lire le message pour mettre à jour les pop-up
+                    setTimeout(() => location.reload(), 500);
                 })
                 .catch(error => console.error('Erreur:', error));
         }
