--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,16 +58,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/map">Accueil</a>
+                    <a class="nav-link" href="/user/map">Accueil</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/profile">Profil</a>
+                    <a class="nav-link" href="/user/profile">Profil</a>
                 </li>
 
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/favorite">Mes favoris</a>
+                    <a class="nav-link" href="/user/favorite">Mes favoris</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/a_propos">À propos</a>
