--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,89 +7,62 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <style>
-
-        #head {
-            text-align: center;
-            margin-top: 30px;
-        }
-
-        /**/
-        nav.navbar {
-            background-color: #343a40;
+        input{
             margin-bottom: 20px;
-        }
-        nav.navbar a.navbar-brand,
-        nav.navbar a.nav-link {
-            color: #ffffff !important;
-        }
-        .card {
-            margin: 20px 0;
-        }
-        footer {
-            background-color: #343a40;
-            color: #ffffff;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-        }
-        .footer-link {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        .footer-link:hover {
-            text-decoration: underline;
-        }
 
+        }
+        #map {
+            margin-bottom: 40px;
+        }
+        #head { text-align: center; margin-top: 30px; }
+        nav.navbar { background-color: #343a40; margin-bottom: 20px; }
+        nav.navbar a.navbar-brand, nav.navbar a.nav-link { color: #ffffff !important; }
+        .card { margin: 20px 0; }
+        footer { background-color: #343a40; color: #ffffff; text-align: center; padding: 20px; }
+        .footer-link { color: #ffffff; text-decoration: none; }
+        .footer-link:hover { text-decoration: underline; }
     </style>
 
     {% block stylesheets %}{% endblock %}
     {% block javascripts %}{% endblock %}
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
-{##}
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container">
-        <a class="navbar-brand" href="#"></a>    {#On peut mettre un titre pour en haut a gauche#}
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/map">Accueil</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/profile">Profil</a>
-                </li>
-
-
-                <li class="nav-item">
-                    <a class="nav-link" href="/user/favorite">Mes favoris</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/a_propos">À propos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Se déconnecter</a>
-                </li>
-            </ul>
+{% if app.user %}
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="/user/map">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/user/profile">Profil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/user/favorite">Mes favoris</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/a_propos">À propos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Se déconnecter</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+{% endif %}
 
 <div class="container" id="head">
-    <img src="{{ asset('images/logoVeliko.png') }}" width="200"  >
+    <img src="{{ asset('images/logoVeliko.png') }}" width="200">
     <h1></h1>
 </div>
+
 <div class="container">
     {% block content %}{% endblock %}
+
+
+
+
 </div>
 
-{##}
-<footer>
+<footer class="mt-auto">
     <div class="container">
         <p>&copy; 2024 MonProjet. Tous droits réservés.</p>
         <a href="/mention/legal" class="footer-link">Mentions légales</a> |
@@ -101,5 +74,4 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
-
 </html>
